# zigporter

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  README.md  codecov.yml  pyproject.toml  zensical.toml
.claude/skills/network-map-demo-svg/: SKILL.md
.claude/skills/network-map-demo-svg/evals/: evals.json
.claude/skills/network-map-dev/: SKILL.md
.claude/skills/smart-rename/: SKILL.md
.claude/skills/update-demo/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: brew-publish.yml  ci.yml  docs.yml  publish.yml
Formula/: zigporter.rb
docs/: architecture.md  demo.md  development.md  index.md  interactive-demo.md
docs/api/: config.md  ha_client.md  index.md  models.md  z2m_client.md
docs/demo/: index.html
docs/getting-started/: configuration.md  installation.md
docs/guide/: authentication.md  migration-wizard.md  network-map.md  rename.md  smart-rename.md  stale.md
guides/: publishing.md
scripts/: gen_demo_svg.py
site/demo/: index.html
src/zigporter/: config.py  entity_refs.py  ha_client.py  lovelace.py  main.py  migration_state.py  models.py  naming_convention.py  rename_plan.py  stale_state.py  ui.py  utils.py  z2m_client.py
src/zigporter/commands/: check.py  export.py  export_z2m.py  fix_device.py  inspect.py  list_devices.py  list_z2m.py  migrate.py  migrate_reporting.py  migrate_reverse.py  network_map.py  network_map_svg.py  rename.py  rename_device.py  rename_entity.py  setup.py  stale.py  z2m_health.py
tests/: conftest.py  test_config.py  test_ha_client.py  test_lovelace.py  test_main.py  test_naming_convention.py  test_stale_state.py  test_z2m_client.py
tests/commands/: conftest.py  test_check.py  test_export.py  test_export_z2m.py  test_fix_device.py  test_inspect.py  test_list_devices.py  test_list_z2m.py  test_migrate.py  test_migrate_reverse.py  test_network_map.py  test_rename.py  test_rename_device.py  test_rename_entity.py  test_setup.py  test_stale.py  test_z2m_health.py
