[project]
name = "zigporter"
version = "1.3.2"
description = "CLI toolkit for Home Assistant Zigbee — migrate ZHA → Z2M, cascade-rename entities and devices, and map your mesh."
readme = "README.md"
authors = [
    { name = "Even Nordstad", email = "even.nordstad@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "websockets>=12",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "rich>=13",
    "questionary>=2.1.1",
    "svgwrite>=1.4",
]

[project.urls]
Homepage = "https://github.com/nordstad/zigporter"
Repository = "https://github.com/nordstad/zigporter"
Documentation = "https://nordstad.github.io/zigporter/"
"Bug Tracker" = "https://github.com/nordstad/zigporter/issues"
Changelog = "https://github.com/nordstad/zigporter/blob/main/CHANGELOG.md"

[project.scripts]
zigporter = "zigporter.main:app"

[build-system]
requires = ["uv_build>=0.9.26,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
docs = [
    "zensical",
    "mkdocstrings[python]",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "respx>=0.21",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "twine>=5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:install.*ipywidgets.*:UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py313"

